force-app/main/default/objects/Aprobador__c/Aprobador__c.object-meta.xml
<CustomObject>
    <label>Aprobador</label>
    <nameField>
        <label>Aprobadores Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aprobadores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>