force-app/main/default/objects/Aprobador__c/fields/Aprobada_por_cliente__c.field-meta.xml
<CustomField>
    <fullName>Aprobada_por_cliente__c</fullName>
    <formula>IF( aprobados__c =  Cliente__r.Cantidad_de_aprobadores__c , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aprobada por cliente</label>
    <type>Checkbox</type>
</CustomField>