force-app/main/default/objects/Aprobador__c/fields/aprobados__c.field-meta.xml
<CustomField>
    <fullName>aprobados__c</fullName>
    <formula>IF(ISBLANK(Prueba__c), 0, LEN(TRIM( Prueba__c ))-LEN(SUBSTITUTE( Prueba__c ,&quot;;&quot;,&quot;&quot;))+1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>aprobados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>