force-app/main/default/objects/Aprobador__c/fields/Prueba__c.field-meta.xml
<CustomField>
    <fullName>Prueba__c</fullName>
    <label>Prueba</label>
    <type>TextArea</type>
</CustomField>